--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     body {
       margin: 0;
       padding: 40px 0;
-      background: #f0f0f0; /* soft warm neutral */
+      background: transparent; /* TRANSPARENT BACKGROUND */
       font-family: "Inter", system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
       display: flex;
       justify-content: center;
@@ -19,6 +19,7 @@
       display: flex;
       justify-content: center;
       padding: 0 20px;
+      background: transparent; /* also transparent */
     }
 
     .donation-card {
@@ -35,7 +36,7 @@
     .donation-label {
       font-size: 1rem;
       letter-spacing: 1px;
-      color: #000000; /* black */
+      color: #000000;
       font-weight: 700;
       text-transform: uppercase;
       margin-bottom: 18px;
@@ -44,7 +45,7 @@
     .donation-total {
       font-size: 4rem;
       font-weight: 800;
-      color: #000000; /* black */
+      color: #000000;
       margin-bottom: 16px;
       line-height: 1.1;
     }
